--- a/heroes/index.html
+++ b/heroes/index.html
@@ -10,6 +10,8 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.17.0/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-5WvBJvQhQhhtnkx3Z+joFzO4kLTAe0dEM9qAMlK18kLsU4zhEXhK9c73i7q7YqT" crossorigin="anonymous">
+
 
 
     <!-- Bootstrap core CSS -->
@@ -29,6 +31,64 @@
           font-size: 3.5rem;
         }
       }
+
+      body {
+	font-family: "Roboto", sans-serif;
+	background: #ffffff;
+	overflow-x:visible;
+	margin: 0; /* Reset default margin */
+  }
+  
+  * {
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+	overflow-x: hidden;
+  }
+
+    @media (min-width: 12px) {
+  .rounded-lg-3 { border-radius: .3rem; }
+}
+
+.btn {
+  position: absolute;
+  left: 600px;
+  top: 53px;
+  background-color: #ffffff;
+  border: 1px solid #f7f7f7;
+  /* Other button styles */
+}
+
+.btn:active {
+	background: #eaeaea;
+    border: #f7f7f7;
+}
+
+.btn:before {
+	content: "Copied";
+	position: absolute;
+	top: -45px;
+	right: 0px;
+	background: #ffffff;
+	padding: 8px 10px;
+	border-radius: 20px;
+	font-size: 15px;
+	display: none;
+}
+
+.:after {
+	content: "";
+	position: absolute;
+	top: -20px;
+	right: 25px;
+	width: 10px;
+	height: 10px;
+	background: #ffffff;
+	transform: rotate(45deg);
+	display: none;
+}
+
+
     </style>
 
     <!-- Custom styles for this template -->
@@ -55,7 +115,7 @@
         <div class="card-body">
             <h5 class="card-title">git init</h5>
             <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">                <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git init</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>            </div>
+              <a href="#" class="btn  copy-btn" style="color: rgb(0, 0, 0);">📋</a>            </div>
         </div>
     </div>
 </div>
@@ -67,7 +127,7 @@
             <h5 class="card-title">git clone</h5>
             <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
                 <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git clone <repository-url></p>
-                <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+                <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
             </div>
         </div>
     </div>
@@ -80,7 +140,7 @@
           <h5 class="card-title">git add</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git add <file-name></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -93,7 +153,7 @@
           <h5 class="card-title">git commit</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git commit -m "Commit message"</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -106,7 +166,7 @@
           <h5 class="card-title">git status</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git status</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -119,7 +179,7 @@
           <h5 class="card-title">git branch</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git branch</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -132,7 +192,7 @@
           <h5 class="card-title">git merge</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git merge <branch-name></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -145,7 +205,7 @@
           <h5 class="card-title">git merge</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git merge <branch-name></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -158,7 +218,7 @@
           <h5 class="card-title">git pull</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git pull origin <branch-name></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -171,7 +231,7 @@
           <h5 class="card-title">git push</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git push origin <branch-name></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -184,7 +244,7 @@
           <h5 class="card-title">git log</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git log</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -197,7 +257,7 @@
           <h5 class="card-title">git remote</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git remote -v</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -210,7 +270,7 @@
           <h5 class="card-title">git fetch</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git fetch origin</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -223,7 +283,7 @@
           <h5 class="card-title">git checkout</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git checkout <branch-name></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -236,7 +296,7 @@
           <h5 class="card-title">git reset</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git reset <commit-hash></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -249,7 +309,7 @@
           <h5 class="card-title">git add -A</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git add -A</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -262,7 +322,7 @@
           <h5 class="card-title">git log --oneline</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git log --oneline</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -275,7 +335,7 @@
           <h5 class="card-title">git cherry-pick</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git cherry-pick <commit-hash></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -288,7 +348,7 @@
           <h5 class="card-title">git stash</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git stash</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -301,7 +361,7 @@
           <h5 class="card-title">git remote add</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git remote add <remote-name> <repository-url></p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -314,7 +374,7 @@
           <h5 class="card-title">git log -p</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git log -p</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
@@ -327,7 +387,7 @@
           <h5 class="card-title">git log</h5>
           <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
               <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git log</p>
-              <a href="#" class="btn btn-primary copy-btn" style="color: white;">📋</a>
+              <a href="#" class="btn  copy-btn" style="color: white;">📋</a>
           </div>
       </div>
   </div>
