--- a/heroes/index.html
+++ b/heroes/index.html
@@ -111,14 +111,17 @@
 
   <div class="row">
     <div class="col-sm-6 mx-auto px-5">
-    <div class="card mb-5">
-        <div class="card-body">
+        <div class="card mb-5">
+          <div class="card-body">
             <h5 class="card-title">git init</h5>
-            <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">                <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git init</p>
-              <a href="#" class="btn  copy-btn" style="color: rgb(0, 0, 0);">📋</a>            </div>
+            <div class="copy-box" style="border: 1px solid black; padding: 1px; text-align: center; display: flex; align-items: center; justify-content: center;">
+              <p class="text-to-copy" style="font-family: monospace; margin: 10px 10px 10px 0;">git init</p>
+              <a href="#" class="btn copy-btn" style="color: rgb(0, 0, 0);">📋</a>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
+      </div>
+      
 
 
   <div class="col-sm-6 mx-auto px-5">
@@ -409,6 +412,7 @@
 
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
+
 </body>
 </html>
 
@@ -449,4 +453,4 @@ copyText.querySelector("button").addEventListener("click", function () {
 	}, 2500);
 });
 
-</script>
+</scrip>
